"fix" z-indexes

--- a/packages/extension/src/ui-solid/primitives/Dialog.module.css
+++ b/packages/extension/src/ui-solid/primitives/Dialog.module.css
@@ -1,7 +1,7 @@
 .overlay {
   position: fixed;
   inset: 0;
-  z-index: 9998;
+  z-index: 100000;
   background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(8px);
 }
@@ -10,7 +10,7 @@
   position: fixed;
   left: 50%;
   top: 50%;
-  z-index: 9999;
+  z-index: 100001;
   display: grid;
   width: 100%;
   max-width: 32rem;
